@@ -1,3 +1,8 @@
+2009-02-05  Rafael Avila de Espindola  <espindola@google.com>
+
+	* Makefile.def: all-lto-plugin depends on all-libiberty.
+	* Makefile.in: Regenerate.
+
 2008-09-04  Rafael Avila de Espindola  <espindola@google.com>
 
 	* Makefile.def: set bootstrap=true for lto-plugin.
