@@ -1,3 +1,8 @@
+2009-02-05  Rafael Avila de Espindola  <espindola@google.com>
+
+	* configure.ac: Build shared by default.
+	* configure: Regenerate.
+
 2008-10-30  Simon Baldwin  <simonb@google.com>
 
 	* make-temp-file.c (make_temp_file_common): Split out from original
