@@ -17,4 +17,4 @@ ltosymtab_CFLAGS = $(AM_CFLAGS)
 libexecsub_LTLIBRARIES = liblto_plugin.la
 
 liblto_plugin_la_SOURCES = lto-plugin.c $(top_srcdir)/../gcc/lto/common.c
-liblto_plugin_la_LIBADD = -lelf
+liblto_plugin_la_LIBADD = -lelf -L../libiberty/pic -liberty
