@@ -1,3 +1,10 @@
+2009-02-05  Rafael Avila de Espindola  <espindola@google.com>
+
+	* Makefile.am (liblto_plugin_la_LIBADD): Link with libiberty.
+	* Makefile.in: Regenerate.
+	* lto-plugin.c (add_output_files): Argument is now a FILE.
+	(exec_lto_wrapper): Use writeargv and pex.
+
 2009-02-04  Rafael Avila de Espindola  <espindola@google.com>
 
 	Revert:
